# google-nest-camera-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  full_test.py  manage_audio.py  mediamtx.yml  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
DockerFiles/: docker_run.sh  google-nest-camera-proxy.ini  mediamtx.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/google_nest_camera_proxy/: __init__.py  __main__.py  auth.py  browser_bridge.py  camera.py  camera_config.py  google_nest_camera_proxy.py  rtsp_server.py
tests/: conftest.py  rtsp.yml  test-config  test_auth.py  test_dummy.py  test_google_nest_camera_proxy.py  test_proxy.py  test_rtsp_server.py
